<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fi.vtt.nubotest.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:text="@string/login"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/blue"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:hint="@string/username"
            android:inputType="text"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="#333"
            android:gravity="center"
            android:id="@+id/username"
            android:layout_weight="1" />

        <EditText
            android:hint="@string/room"
            android:inputType="text"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="#333"
            android:gravity="center"
            android:id="@+id/roomname"
            android:layout_weight="1" />

    </LinearLayout>



    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/button_join_room"
        style="@style/TextStyleHeaderLarge"
        android:background="@color/blue_dark"
        android:layout_marginBottom="35dp"
        android:onClick="joinRoom"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:visibility="gone">
    </ListView>

</LinearLayout>
